[gd_scene format=3 uid="uid://ds6jg5p7tg18a"]

[ext_resource type="Script" uid="uid://c0wu05iy5vpje" path="res://geonerds.gd" id="1_rtr7l"]
[ext_resource type="Texture2D" uid="uid://b36ns48f6tdj7" path="res://world (2).png" id="2_3p5tw"]
[ext_resource type="Texture2D" uid="uid://dfxrpre1rqg03" path="res://INFO.png" id="3_kyqsu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kyqsu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qynu5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8uhbq"]

[node name="Node2D" type="Node2D" unique_id=1669328160]
script = ExtResource("1_rtr7l")

[node name="Button" type="Button" parent="." unique_id=1437801132]
offset_left = -2047.0
offset_top = 1070.0
offset_right = -1545.0
offset_bottom = 1588.0
scale = Vector2(0.3433905, 0.33029345)
theme_override_styles/normal = SubResource("StyleBoxEmpty_kyqsu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qynu5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8uhbq")
icon = ExtResource("3_kyqsu")

[node name="Submitbutton" type="Button" parent="." unique_id=1949523355]
offset_left = -554.0
offset_top = -181.0
offset_right = -354.0
offset_bottom = -84.0

[node name="InputBox" type="LineEdit" parent="." unique_id=784775352]
offset_left = -617.0
offset_top = -60.0
offset_right = -266.0
offset_bottom = 208.0

[node name="MapContainer" type="Node2D" parent="." unique_id=1642784921]

[node name="World(2)" type="Sprite2D" parent="MapContainer" unique_id=2042167482]
texture = ExtResource("2_3p5tw")

[node name="Camera2D" type="Camera2D" parent="MapContainer" unique_id=1348370569]
zoom = Vector2(0.277, 0.255)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=859696896]

[node name="Label" type="Label" parent="CanvasLayer" unique_id=914881493]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Submitbutton" to="." method="_on_submitbutton_pressed"]
